--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
-    // outline: 1px solid green;
+    outline: 1px solid green;
 
     // @media screen and (min-width: 480px) {
     //     max-width: 480px;
