--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,9 +13,10 @@
 @import './layout/header';
 @import './layout/hero';
 
-// @import './layout/work';
+
 @import './layout/team';
 @import './layout/about';
+@import './layout/reviews';
 // @import './layout/client';
 // @import './layout/footer';
 // @import './layout/portfolio-btn';
