--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -5,7 +5,7 @@ $slide-width: 61%;
 // Define gap between the slides
 $slide-separation: 10px;
 
-$distance: 500px;
+$distance: 1000px;
 
 #carousel {
     perspective: $distance;
@@ -65,41 +65,68 @@ $distance: 500px;
     }
 }
 
-.r {
-    &__wrapper {
-        margin: auto;
-        border-radius: 8px;
-        background-color: #ffffff;
-        min-width: 200px;
-        max-width: 500px;
-        display: flex;
-        justify-content: center;
+// .reviews-card {
+//     max-width: 600px;
+//     margin: 0 auto;
+//     min-width: 100%;
+//     &__item {
+//         border-radius: 10px;
+//         background-color: #ffffff;
+        
+//     }
+    
+// }
+// .frame {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     padding: 10px;
+//     position: relative;
+
+    
+// }
+.frame {
+    padding: 10px;
+    margin: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    min-width: 200px;
+    max-width: 450px;
+    background-color: #ffffff;
+    border-radius: 10px;
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        flex: 0 1 100%
     }
-    &__item {
+}
+.frame-text {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    
+
+    &__png {
+        width: 20px;
+    }
+
+    &__text {
         color: var(--secondary-text-color);
-        padding: 20px;
-        flex: 0 1 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    }
+
+}
+.frame-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__img {
+        width: 100px;
+    
+        border-radius: 50%;
+        overflow: hidden;
     }
     &__title {
         color: var(--secondary-text-color);
-        font-size: (calc(14px + 2 * ((100vw - 420px) / 860)))
-    }
-    &__text {
-        color: var(--secondary-text-color);
-        font-size: (calc(14px + 2 * ((100vw - 420px) / 860)))
-    }
-
-    &__img {
-
-        width: 70%;
-        border-radius: 50%;
-    }
-    &__img-text {
-        color: var(--secondary-text-color);
-        font-size: (calc(14px + 2 * ((100vw - 420px) / 860)))
     }
 }
