--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -3,7 +3,7 @@
 $slide-width: 61%;
 
 // Define gap between the slides
-$slide-separation: 10px;
+$slide-separation: 50px;
 
 $distance: 1000px;
 
@@ -86,28 +86,52 @@ $distance: 1000px;
     
 // }
 .frame {
-    padding: 10px;
     margin: auto;
+    padding: 10px;
+    gap: 20px;
     display: flex;
     flex-direction: column-reverse;
-    min-width: 200px;
-    max-width: 450px;
+    min-width: 150px;
+    max-width: 300px;
     background-color: #ffffff;
     border-radius: 10px;
 
     @media screen and (min-width: 768px) {
         flex-direction: row;
-        flex: 0 1 100%
+        padding-left: 50px;
+        padding-right: 50px;
+        max-width: 600px;
+    }
+    @media screen and (min-width: 1050px) {
+        max-width: 600px;
+
     }
 }
 .frame-text {
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-self: flex-start;
+    @media screen and (min-width: 768px) {
+        width: 50%;
+        justify-content: center;
+
+    }
+    @media screen and (min-width: 1050px) {
+        margin-top: 60px;
+        margin-bottom: 60px;
+        margin-left: 60px;
+    }
     
 
     &__png {
         width: 20px;
+        @media screen and (min-width: 1050px) {
+        width: 40px;
+        }
+
+
     }
 
     &__text {
@@ -119,14 +143,25 @@ $distance: 1000px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+        width: 50%;
+    }
 
     &__img {
         width: 100px;
     
         border-radius: 50%;
         overflow: hidden;
+        @media screen and (min-width: 768px) {
+            width: 140px;
+        }
+        @media screen and (min-width: 1050px) {
+            width: 175px;
+        }
     }
     &__title {
+        margin-top: 10px;
         color: var(--secondary-text-color);
     }
 }
