--- a/css/main.css
+++ b/css/main.css
@@ -950,6 +950,26 @@ address {
 }
 .frame-text__text {
   color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: -1px;
+}
+@media screen and (min-width: 768px) {
+  .frame-text__text {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.25;
+    letter-spacing: -1px;
+  }
+}
+@media screen and (min-width: 1050px) {
+  .frame-text__text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.1111111111;
+    letter-spacing: -1px;
+  }
 }
 
 .frame-img {
