--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -136,6 +136,15 @@ $distance: 1000px;
 
     &__text {
         color: var(--secondary-text-color);
+        @include font($fw: 500, $fs: 14px, $lh: 16px, $ls: -1px);
+        @media screen and (min-width: 768px) {
+            @include font($fw: 500, $fs: 24px, $lh: 30px, $ls: -1px);
+        }
+    
+        @media screen and (min-width: 1050px) {
+            @include font($fw: 500, $fs: 18px, $lh: 20px, $ls: -1px);
+        }
+
     }
 
 }
