--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ address {
   margin: 0 auto;
   padding: 0;
   max-width: 1400px;
+  outline: 1px solid red;
 }
 
 .container {
@@ -68,6 +69,7 @@ address {
   margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;
+  outline: 1px solid green;
 }
 
 .header {
@@ -751,8 +753,8 @@ address {
 .info__title {
   color: var(--primary-text-color);
   font-weight: 700;
-  font-size: 30px;
-  line-height: 1.2666666667;
+  font-size: 26px;
+  line-height: 1.2307692308;
   letter-spacing: -1px;
 }
 @media screen and (min-width: 768px) {
@@ -817,8 +819,8 @@ address {
 }
 
 #carousel {
-  -webkit-perspective: 1000px;
-          perspective: 1000px;
+  -webkit-perspective: 2000px;
+          perspective: 2000px;
   overflow: hidden;
 }
 #carousel #scene {
@@ -835,7 +837,7 @@ address {
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 0 15px 0 7.5px;
+  padding: 0 5px 0 2.5px;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
 }
@@ -851,6 +853,7 @@ address {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  gap: 20px;
   margin: 20px auto 0 auto;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -874,7 +877,8 @@ address {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   background-color: #FED84C;
-  fill: #2f2f2f;
+  font-weight: 800;
+  font-size: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1071,5 +1075,164 @@ address {
 }
 .frame-img__title {
   margin-top: 10px;
+  color: var(--secondary-text-color);
+}
+
+.footer {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background-image: url(../img/bg-mobile.png), url(../img/bg-top.png);
+  background-size: 960px 200px;
+  background-repeat: no-repeat;
+  background-position: 100% 100%, 0 0;
+}
+@media screen and (min-width: 800px) {
+  .footer {
+    background-image: url(../img/bg-tablet.png), url(../img/bg-top.png);
+    background-size: 1200px 200px;
+  }
+}
+@media screen and (min-width: 1050px) {
+  .footer {
+    background-color: var(--primary-bg-color);
+    background-image: url(../img/bg@2x.png), url(../img/bg-top.png);
+    background-repeat: no-repeat;
+    background-size: 1400px 200px;
+    padding-top: 180px;
+    padding-bottom: 180px;
+  }
+}
+.footer__wrapper {
+  min-width: 200px;
+  max-width: 800px;
+}
+
+.form {
+  background-color: #ffffff;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+}
+@media screen and (min-width: 768px) {
+  .form {
+    padding: 60px;
+  }
+}
+.form__title {
+  color: var(--secondary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.1111111111;
+  letter-spacing: -1px;
+}
+@media screen and (min-width: 768px) {
+  .form__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 1.1818181818;
+    letter-spacing: -1px;
+  }
+}
+.form__text {
+  margin-top: 10px;
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.125;
+  letter-spacing: -1px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .form__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.2222222222;
+    letter-spacing: -1px;
+  }
+}
+.form__input {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 700px;
+}
+@media screen and (min-width: 768px) {
+  .form__input {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+.form__wrapper {
+  display: block;
+  position: relative;
+  max-width: 380px;
+}
+.form__phone {
+  border-radius: 8px;
+  background-color: #F2F6FA;
+  height: 60px;
+  padding: 20px 20px 20px 40px;
+  width: 100%;
+}
+.form__phone::-webkit-input-placeholder {
+  color: #7d7d7d;
+}
+.form__phone::-moz-placeholder {
+  color: #7d7d7d;
+}
+.form__phone:-ms-input-placeholder {
+  color: #7d7d7d;
+}
+.form__phone::-ms-input-placeholder {
+  color: #7d7d7d;
+}
+.form__phone::placeholder {
+  color: #7d7d7d;
+}
+.form__icon {
+  fill: #929AA2;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: fill 250ms linear;
+  transition: fill 250ms linear;
+}
+.form__button {
+  background-color: #FED84C;
+  border-radius: 8px;
+  border: none;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  min-width: 150px;
+  max-width: 380px;
+  padding: 20px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: -1px;
   color: var(--secondary-text-color);
 }/*# sourceMappingURL=main.css.map */
