--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,6 @@
 @import './layout/about';
 @import './layout/reviews';
 // @import './layout/client';
-// @import './layout/footer';
+@import './layout/footer';
 // @import './layout/portfolio-btn';
 // @import './layout/samples';
