--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,212 @@ address {
   padding-right: 10px;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 5;
+  -webkit-transition: all 400ms linear;
+  transition: all 400ms linear;
+}
+
+.backdrop-close {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.modal {
+  width: 100%;
+  max-width: 450px;
+  height: 360px;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
+}
+.modal__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.modal__button:hover {
+  background-color: #929292;
+}
+.modal__button:active {
+  background-color: #000000;
+  fill: #FFFFFF;
+}
+
+.backdrop-close {
+  cursor: default;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.modal-form b {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+.modal-form__icon {
+  fill: #000000;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: fill 250ms linear;
+  transition: fill 250ms linear;
+}
+
+.contact-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.contact-form__label {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  margin-bottom: 10px;
+  color: #757575;
+}
+.contact-form__wrapper {
+  display: block;
+  position: relative;
+  margin-top: 4px;
+}
+.contact-form__input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color 250ms linear;
+  transition: border-color 250ms linear;
+  cursor: pointer;
+}
+.contact-form__input::-webkit-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contact-form__input::-moz-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contact-form__input:-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contact-form__input::-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contact-form__input::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.contact-form__input:focus {
+  outline: none;
+  border-color: #FED84C;
+}
+.contact-form__input:focus + .modal-form__icon {
+  fill: #FED84C;
+}
+
+.button-form {
+  margin-top: 31px;
+  width: 200px;
+  height: 50px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  cursor: pointer;
+  background-color: #FED84C;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  -webkit-box-shadow: 0 4px #a5a5a5;
+          box-shadow: 0 4px #a5a5a5;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #000000;
+  -webkit-transition: -webkit-transform var(--transition-property);
+  transition: -webkit-transform var(--transition-property);
+  transition: transform var(--transition-property);
+  transition: transform var(--transition-property), -webkit-transform var(--transition-property);
+  -webkit-transition: -webkit-box-shadow var(--transition-property);
+  transition: -webkit-box-shadow var(--transition-property);
+  transition: box-shadow var(--transition-property);
+  transition: box-shadow var(--transition-property), -webkit-box-shadow var(--transition-property);
+  -webkit-transition: color var(--transition-property);
+  transition: color var(--transition-property);
+}
+.button-form:hover {
+  background-color: #FED84C;
+}
+.button-form:active {
+  background-color: #2c2c2c;
+  color: #ffffff;
+  -webkit-box-shadow: 0 2px #666;
+          box-shadow: 0 2px #666;
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
+}
+
 .header {
   background-color: #081130;
   border-bottom: 3px solid #ECECEC;
@@ -399,6 +605,7 @@ address {
   background-size: 960px 200px;
   background-repeat: no-repeat;
   background-position: 100% 100%;
+  position: relative;
 }
 @media screen and (min-width: 800px) {
   .hero {
@@ -417,6 +624,28 @@ address {
     padding-top: 90px;
     padding-bottom: 90px;
   }
+}
+.hero__tooth {
+  position: absolute;
+  width: 50px;
+  opacity: 0.5;
+}
+@media screen and (min-width: 800px) {
+  .hero__tooth {
+    width: 90px;
+  }
+}
+.hero__tooth.right {
+  top: -10px;
+  right: 20px;
+  -webkit-transform: rotate(25deg);
+          transform: rotate(25deg);
+}
+.hero__tooth.left {
+  top: 50%;
+  left: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .hero-wrapper {
@@ -527,6 +756,7 @@ address {
   margin-top: 20px;
   min-width: 250px;
   height: 88px;
+  z-index: 3;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -680,6 +910,7 @@ address {
   background-size: 960px 200px;
   background-repeat: no-repeat;
   background-position: 100% 100%, 0 0;
+  position: relative;
 }
 @media screen and (min-width: 800px) {
   .about {
@@ -694,6 +925,28 @@ address {
     background-repeat: no-repeat;
     background-size: 1400px 200px;
   }
+}
+.about__tooth {
+  position: absolute;
+  width: 50px;
+  opacity: 0.5;
+}
+@media screen and (min-width: 800px) {
+  .about__tooth {
+    width: 90px;
+  }
+}
+.about__tooth.right {
+  top: 50%;
+  right: 20px;
+  -webkit-transform: rotate(-25deg);
+          transform: rotate(-25deg);
+}
+.about__tooth.left {
+  top: 20%;
+  left: 50px;
+  -webkit-transform: rotate(40deg);
+          transform: rotate(40deg);
 }
 
 .about-wrapper {
@@ -724,6 +977,10 @@ address {
     padding-top: 150px;
     padding-bottom: 150px;
   }
+}
+
+.preview__img {
+  z-index: 3;
 }
 
 .info {
@@ -1118,6 +1375,8 @@ address {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  position: relative;
   padding: 20px;
 }
 @media screen and (min-width: 768px) {
@@ -1158,7 +1417,7 @@ address {
   }
 }
 .form__input {
-  margin-top: 30px;
+  padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1167,10 +1426,7 @@ address {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  max-width: 700px;
+  width: 100%;
 }
 @media screen and (min-width: 768px) {
   .form__input {
@@ -1178,19 +1434,28 @@ address {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
   }
 }
 .form__wrapper {
   display: block;
   position: relative;
-  max-width: 380px;
 }
 .form__phone {
   border-radius: 8px;
   background-color: #F2F6FA;
-  height: 60px;
   padding: 20px 20px 20px 40px;
   width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .form__phone {
+    width: 380px;
+  }
 }
 .form__phone::-webkit-input-placeholder {
   color: #7d7d7d;
@@ -1216,21 +1481,48 @@ address {
   left: 15px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  -webkit-transition: fill 250ms linear;
-  transition: fill 250ms linear;
 }
 .form__button {
+  width: 200px;
+  max-width: 300px;
   background-color: #FED84C;
   border-radius: 8px;
   border: none;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  min-width: 150px;
-  max-width: 380px;
   padding: 20px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: -1px;
   color: var(--secondary-text-color);
+  -webkit-transition-property: background-color, color, -webkit-transform;
+  transition-property: background-color, color, -webkit-transform;
+  transition-property: background-color, color, transform;
+  transition-property: background-color, color, transform, -webkit-transform;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  .form__button {
+    margin: 0;
+  }
+}
+.form__button:hover {
+  color: #fff;
+  background-color: #2f2f2f;
+}
+.form__button:active {
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+}
+.form__tooth {
+  position: absolute;
+  width: 130px;
+  bottom: -30px;
+  left: -30px;
 }/*# sourceMappingURL=main.css.map */
