--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -7,7 +7,7 @@
 
         @include font(700, 20px, 30px, 0.03em);
         text-align: center;
-        color: var(--title-text-color);
+        color: var(--secondary-text-color);
     }
     &__icon {
         fill: #000000;
@@ -51,90 +51,16 @@
         }
         &:focus {
             outline: none;
-            border-color: var(--brand-color);
+            border-color: #FED84C;
         }
         &:focus+.modal-form__icon {
-            fill: var(--brand-color);
+            fill: #FED84C;
         }
     }
-    &__massege {
-        width: 100%;
-        height: 120px;
-        resize: none;
-    
-        margin-top: 4px;
-        padding: 12px 16px;
-    
-        border: 1px solid rgba(33, 33, 33, 0.2);
-        border-radius: 4px;
-    
-        transition: border-color 250ms linear;
 
-        &::placeholder {
-            color: rgba(117, 117, 117, 0.5);
-        }
-        &:focus {
-            outline: none;
-            border-color: var(--brand-color);
-        }
-    }
 }
 
-.modal-form-checkbox {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    text-align: center;
-    @include font($fs: 10px, $lh: 12px, $ls:0.01em);
-    color: #757575;
-    min-width: 310px;
-    cursor: pointer;
-    @media screen and (min-width: 380px) {
-    justify-content: center;
-    }
-    @media screen and (min-width: 768px) {
-        @include font($fs: 12px, $lh: 14px);
-    }
-    @media screen and (min-width: 1200px) {
-        @include font($fs: 14px, $lh: 24px);
-    }
-    &:hover {
-        color: var(--brand-color);
-    }
-    &::before {
-        content: '';
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        margin-right: 8px;
-        border: 1px solid #000000;
-        border-radius: 2px;
-        cursor: pointer;
-        .modal-form-term:checked+& {
-            background-image: url('../images/icon-check.svg');
-            background-position: center;
-            background-size: contain;
-            background-color: var(--brand-color);
-            border-color: var(--brand-color);
-        }
-        .modal-form-term:focus+&,
-        .modal-form-term:hover+& {
-            box-shadow: 0 0 2px var(--brand-color);
-        }
-    }
-}
-.term {
-    color: var(--brand-color);
-    position: relative;
-    @include font($fs: 10px, $lh: 12px, $ls: 0.01em);
-    text-decoration: underline;
-    @media screen and (min-width: 768px) {
-        @include font($fs: 12px, $lh: 14px);
-    }
-    @media screen and (min-width: 1200px) {
-       @include font($fs: 14px, $lh: 24px);
-    }
-}
+
 .button-form {
     margin-top: 31px;
 
@@ -143,22 +69,24 @@
     align-self: center;
     cursor: pointer;
 
-    background-color: #188CE8;
+    background-color: #FED84C;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
     box-shadow: 0 4px #a5a5a5;
 
     @include font($fw: 700,$fs: 16px,$lh: 30px, $ls:0.06em);
-    color: #FFFFFF;
+    color: #000000;
 
     transition: transform var(--transition-property);
     transition: box-shadow var(--transition-property);
+    transition: color var(--transition-property);
     &:hover {
-        background-color: #0981e4;
+        background-color: #FED84C;
     }
     &:active {
-    background-color: #0981e4;
+    background-color: #2c2c2c;
+    color: #ffffff;
     box-shadow: 0 2px #666;
     transform: translateY(3px);
     }
