--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,12 +1,11 @@
 .modal {
     width: 100%;
     max-width: 450px;
-    height: 609px;
+    height: 360px;
     padding: 40px;
     
     @media screen and (min-width: 1200px) {
     max-width: 528px;
-    height: 581px;
     }
     
     position: absolute;
@@ -16,7 +15,7 @@
 
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    border-radius: 15px;
     &__button {
         display: flex;
         justify-content: center;
@@ -31,7 +30,15 @@
         border: 1px solid rgba(0, 0, 0, 0.1);
     
         cursor: pointer;
+        &:hover {
+                background-color: #929292;
+        }
     
+        &:active {
+            background-color:#000000;
+            fill: #FFFFFF;
+        }
+
     }
 }
 .backdrop-close {
