--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -32,6 +32,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    position: relative;
 
     padding: 20px;
     @media screen and (min-width: 768px) {
@@ -58,14 +60,15 @@
     }
 
     &__input {
-        margin-top: 30px;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         gap: 20px;
-        justify-content: center;
-        max-width: 700px;
+        width: 100%;
         @media screen and (min-width: 768px) {
             flex-direction: row;
+            justify-content: center;
+            align-items: stretch;
         }
     
     }
@@ -73,15 +76,17 @@
     &__wrapper {
         display: block;
         position: relative;
-        max-width: 380px;
+        
     }
 
     &__phone {
         border-radius: 8px;
         background-color: #F2F6FA;
-        height: 60px;
         padding: 20px 20px 20px 40px;
         width: 100%;
+        @media screen and (min-width: 768px) {
+            width: 380px;
+        }
        
 
         &::placeholder {
@@ -98,20 +103,57 @@
         top: 50%;
         left: 15px;
         transform: translateY(-50%);
-    
-        transition: fill 250ms linear
+
+       
     }
 
     &__button {
+        width: 200px;
+        max-width: 300px;
         background-color: #FED84C;
         border-radius: 8px;
         border: none;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        min-width: 150px;
-        max-width: 380px;
         padding: 20px;
         @include font($fw: 700, $fs: 16px, $lh: 20px, $ls: -1px);
         color: var(--secondary-text-color);
+        transition-property: background-color, color, transform;
+        transition-duration: 500ms;
+        transition-timing-function: linear;
+        margin-right: auto;
+        margin-left: auto;
+        @media screen and (min-width: 768px) {
+            margin: 0;
+        }
+
+        &:hover {
+                color: #fff;
+                background-color: #2f2f2f;
+            }
+        &:active {
+            transform: translateX(5px);
+        }
+
+    }
+
+    &__tooth {
+        position: absolute;
+        width: 130px;
+        bottom: -30px;
+        left: -30px;
+       
+
+        // &.right {
+        //     top: 0;
+        //     right: 0;
+        //     z-index: 3;
+        // }
+
+        // &.left {
+        //     bottom: 0;
+        //     left: 0;
+        //     z-index: 3;
+        // }
     }
 
 
