--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,6 +3,7 @@
     max-width: 450px;
     height: 360px;
     padding: 40px;
+    z-index: 9;
     
     @media screen and (min-width: 1200px) {
     max-width: 528px;
