--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -142,6 +142,8 @@
     background-repeat: no-repeat;
     background-position: 100% 100%;
 
+    z-index: 10;
+
     padding: 80px 10px;
 
     display: flex;
