--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -144,10 +144,14 @@
 .reviews-button {
     margin-top: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 40px;
 
     border: 1px solid var(--secondary-text-color);
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+    }
+
 
 
     .btn {
