--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -147,20 +147,17 @@
     justify-content: space-between;
     gap: 40px;
 
-    border: 1px solid var(--secondary-text-color);
     @media screen and (min-width: 768px) {
         justify-content: center;
     }
-
-
-
     .btn {
-
         width: 60px;
         height: 60px;
         border-radius: 50%;
+        border: 1px solid var(--secondary-text-color);
 
-        font-size: 900;
+        font-weight: 900;
+        font-size: 34px;
         background-color: #FED84C;
         color: black;
     }
